update ignore file list.

--- a/.gitignore
+++ b/.gitignore
@@ -338,4 +338,6 @@ pip-selfcheck.json
 # Virtualenv
 # http://iamzed.com/2009/05/07/a-primer-on-virtualenv/
 
+reference/*
+
 # End of https://www.toptal.com/developers/gitignore/api/pycharm,python,jupyternotebooks,venv,virtualenv,macos,dotenv
