--- a/.gitignore
+++ b/.gitignore
@@ -251,14 +251,14 @@ target/
 # pyenv
 #   For a library or package, you might want to ignore these files since the code is
 #   intended to run in multiple environments; otherwise, check them in:
-# .python-version
+.python-version
 
 # pipenv
 #   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
 #   However, in case of collaboration, if having platform-specific dependencies or dependencies
 #   having no cross-platform support, pipenv may install dependencies that don't work, or not
 #   install all needed dependencies.
-#Pipfile.lock
+Pipfile.lock
 
 # poetry
 #   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
@@ -341,5 +341,19 @@ pip-selfcheck.json
 # http://iamzed.com/2009/05/07/a-primer-on-virtualenv/
 
 reference/*
+
+# Unit test / coverage reports
+junit/
+junit.xml
+test.db
+
+# .vscode
+.vscode/
+
+# SQLite databases
+*.db*
+
+# Joblib
+/*.joblib
 
 # End of https://www.toptal.com/developers/gitignore/api/pycharm,python,jupyternotebooks,venv,virtualenv,macos,dotenv
